--- a/package.json
+++ b/package.json
@@ -8,10 +8,9 @@
   },
   "dependencies": {
     "buffer": "^6.0.3",
-    "pdf-parse": "^1.1.1"
+    "pdfjs-dist": "^5.3.31"
   },
   "devDependencies": {
-    "@types/pdf-parse": "^1.1.5",
     "@vercel/node": "^3.2.29",
     "typescript": "^5.3.3"
   }
