--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   },
   "dependencies": {
     "buffer": "^6.0.3",
-    "pdfjs-dist": "^5.3.31"
+    "pdf-parse": "^1.1.1"
   },
   "devDependencies": {
     "@vercel/node": "^3.2.29",
