--- a/ vercel.json
+++ b/ vercel.json
@@ -2,7 +2,8 @@
   "version": 2,
   "functions": {
     "api/parse-pdf.ts": {
-      "runtime": "nodejs18.x"
+      "runtime": "nodejs18.x",
+      "external": ["pdf-parse"]
     }
   }
 }
